[gd_scene load_steps=72 format=3 uid="uid://dr48s2i0wfecm"]

[ext_resource type="Texture2D" uid="uid://cdu5kr2eacm8f" path="res://smallPets/小鹿/idle/419-17.png" id="1_haltq"]
[ext_resource type="Texture2D" uid="uid://cn70vrb284nod" path="res://smallPets/小鹿/autoAttack/410-31.png" id="1_pp8dk"]
[ext_resource type="Texture2D" uid="uid://dhvffeyyk31ia" path="res://smallPets/小鹿/idle/419-18.png" id="2_70kn4"]
[ext_resource type="Texture2D" uid="uid://gok07fqhiefy" path="res://smallPets/小鹿/autoAttack/410-32.png" id="2_m360p"]
[ext_resource type="Texture2D" uid="uid://4n5ovjswdvvh" path="res://smallPets/小鹿/autoAttack/410-33.png" id="3_iwnf2"]
[ext_resource type="Texture2D" uid="uid://dha177fc62i5h" path="res://smallPets/小鹿/idle/419-19.png" id="3_p2qgk"]
[ext_resource type="Texture2D" uid="uid://cupdjn4eongmv" path="res://smallPets/小鹿/idle/419-20.png" id="4_enqxx"]
[ext_resource type="Texture2D" uid="uid://xl1j5ajhl2s6" path="res://smallPets/小鹿/autoAttack/410-34.png" id="4_kas2f"]
[ext_resource type="Texture2D" uid="uid://dfa0mtu32mo0y" path="res://smallPets/小鹿/idle/419-21.png" id="5_7e12x"]
[ext_resource type="Texture2D" uid="uid://b6lm5xfffenge" path="res://smallPets/小鹿/autoAttack/410-35.png" id="5_h8k47"]
[ext_resource type="Texture2D" uid="uid://dkn4j2rb6lsho" path="res://smallPets/小鹿/autoAttack/410-36.png" id="6_etlss"]
[ext_resource type="Texture2D" uid="uid://pa4m46xlnh8a" path="res://smallPets/小鹿/idle/419-22.png" id="6_rip00"]
[ext_resource type="Texture2D" uid="uid://cxxj285470uje" path="res://smallPets/小鹿/idle/419-23.png" id="7_10s0v"]
[ext_resource type="Texture2D" uid="uid://c42v3xaldm72d" path="res://smallPets/小鹿/autoAttack/410-37.png" id="7_fpue2"]
[ext_resource type="Texture2D" uid="uid://bbkxd6b7fhlnk" path="res://smallPets/小鹿/idle/419-24.png" id="8_3xs4y"]
[ext_resource type="Texture2D" uid="uid://dhdb75sow05x8" path="res://smallPets/小鹿/autoAttack/410-38.png" id="8_08o2a"]
[ext_resource type="Texture2D" uid="uid://c6vu1q20vbh6g" path="res://smallPets/小鹿/autoAttack/410-39.png" id="9_vf3nv"]
[ext_resource type="Texture2D" uid="uid://ficyqm1do2md" path="res://smallPets/小鹿/autoAttack/410-40.png" id="10_pf4j6"]
[ext_resource type="Texture2D" uid="uid://d0i451m8nc3ty" path="res://smallPets/小鹿/autoAttack/410-41.png" id="11_r6pg1"]
[ext_resource type="Texture2D" uid="uid://dfn7gfoqfvacn" path="res://smallPets/小鹿/autoAttack/410-42.png" id="12_ciaqb"]
[ext_resource type="Texture2D" uid="uid://dcmfmdxwm8ckw" path="res://smallPets/小鹿/autoAttack/410-43.png" id="13_srvqa"]
[ext_resource type="Texture2D" uid="uid://4ecqsxqsspxd" path="res://smallPets/小鹿/magic/409-31.png" id="22_ntml4"]
[ext_resource type="Texture2D" uid="uid://b21s8tiq4wv8s" path="res://smallPets/小鹿/magic/409-32.png" id="23_433qm"]
[ext_resource type="Texture2D" uid="uid://dh5hmoukoxap1" path="res://smallPets/小鹿/magic/409-33.png" id="24_grtsy"]
[ext_resource type="Texture2D" uid="uid://csxyotgsmj773" path="res://smallPets/小鹿/magic/409-34.png" id="25_7y4kk"]
[ext_resource type="Texture2D" uid="uid://d2qppvo2gvxtn" path="res://smallPets/小鹿/magic/409-35.png" id="26_4iv0g"]
[ext_resource type="Texture2D" uid="uid://c35abw5sgo2wp" path="res://smallPets/小鹿/magic/409-36.png" id="27_xxa76"]
[ext_resource type="Texture2D" uid="uid://ctp6dier3im3s" path="res://smallPets/小鹿/magic/409-37.png" id="28_chet4"]
[ext_resource type="Texture2D" uid="uid://dbdmh1db5v2cp" path="res://smallPets/小鹿/magic/409-38.png" id="29_4u1xg"]
[ext_resource type="Texture2D" uid="uid://b3v88exsbl8kl" path="res://smallPets/小鹿/magic/409-39.png" id="30_i6rqm"]
[ext_resource type="Texture2D" uid="uid://d0manwws2qp8f" path="res://smallPets/小鹿/magic/409-40.png" id="31_6lpx8"]
[ext_resource type="Texture2D" uid="uid://bnwy7itqgwvbx" path="res://smallPets/小鹿/magic/409-41.png" id="32_cnhsi"]
[ext_resource type="Texture2D" uid="uid://cvrv2kvpnpbkt" path="res://smallPets/小鹿/magic/409-42.png" id="33_qti8v"]
[ext_resource type="Texture2D" uid="uid://dgg5egcx0knoy" path="res://smallPets/小鹿/magic/409-43.png" id="34_f1r5d"]
[ext_resource type="Script" path="res://Script/smallPet.gd" id="35_ghnq7"]
[ext_resource type="Texture2D" uid="uid://cu085tkq74nny" path="res://speed.png" id="36_3bsl0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oil4b"]
atlas = ExtResource("1_pp8dk")
region = Rect2(0, 0, 51, 101)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys2x2"]
atlas = ExtResource("2_m360p")
region = Rect2(0, 0, 55, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lgfe"]
atlas = ExtResource("3_iwnf2")
region = Rect2(0, 0, 64, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_erq0t"]
atlas = ExtResource("4_kas2f")
region = Rect2(0, 0, 66, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfopj"]
atlas = ExtResource("5_h8k47")
region = Rect2(0, 0, 69, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_t28le"]
atlas = ExtResource("6_etlss")
region = Rect2(0, 0, 78, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_drsu5"]
atlas = ExtResource("7_fpue2")
region = Rect2(0, 0, 94, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4vuh"]
atlas = ExtResource("8_08o2a")
region = Rect2(0, 0, 102, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp5n8"]
atlas = ExtResource("9_vf3nv")
region = Rect2(0, 0, 96, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkxgx"]
atlas = ExtResource("10_pf4j6")
region = Rect2(0, 0, 123, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffbvu"]
atlas = ExtResource("11_r6pg1")
region = Rect2(0, 0, 130, 195)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm2me"]
atlas = ExtResource("12_ciaqb")
region = Rect2(0, 0, 134, 202)

[sub_resource type="AtlasTexture" id="AtlasTexture_r24we"]
atlas = ExtResource("13_srvqa")
region = Rect2(0, 0, 139, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_hi0ql"]
atlas = ExtResource("1_haltq")
region = Rect2(0, 0, 58, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fwyn"]
atlas = ExtResource("2_70kn4")
region = Rect2(0, 0, 61, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd8gt"]
atlas = ExtResource("3_p2qgk")
region = Rect2(0, 0, 67, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_krrax"]
atlas = ExtResource("4_enqxx")
region = Rect2(0, 0, 71, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw5uq"]
atlas = ExtResource("5_7e12x")
region = Rect2(0, 0, 60, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l5d2"]
atlas = ExtResource("6_rip00")
region = Rect2(0, 0, 55, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_5oxt5"]
atlas = ExtResource("7_10s0v")
region = Rect2(0, 0, 60, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0iqr"]
atlas = ExtResource("8_3xs4y")
region = Rect2(0, 0, 63, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_rloiv"]
atlas = ExtResource("22_ntml4")
region = Rect2(0, 0, 51, 101)

[sub_resource type="AtlasTexture" id="AtlasTexture_2je3i"]
atlas = ExtResource("23_433qm")
region = Rect2(0, 0, 53, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pymop"]
atlas = ExtResource("24_grtsy")
region = Rect2(0, 0, 63, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1qug"]
atlas = ExtResource("25_7y4kk")
region = Rect2(0, 0, 59, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_eamla"]
atlas = ExtResource("26_4iv0g")
region = Rect2(0, 0, 51, 126)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6vqj"]
atlas = ExtResource("27_xxa76")
region = Rect2(0, 0, 79, 123)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1bs7"]
atlas = ExtResource("28_chet4")
region = Rect2(0, 0, 101, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_736ye"]
atlas = ExtResource("29_4u1xg")
region = Rect2(0, 0, 115, 155)

[sub_resource type="AtlasTexture" id="AtlasTexture_8srn3"]
atlas = ExtResource("30_i6rqm")
region = Rect2(0, 0, 117, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5k58"]
atlas = ExtResource("31_6lpx8")
region = Rect2(0, 0, 114, 183)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrst7"]
atlas = ExtResource("32_cnhsi")
region = Rect2(0, 0, 111, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7utu"]
atlas = ExtResource("33_qti8v")
region = Rect2(0, 0, 106, 213)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8nl8"]
atlas = ExtResource("34_f1r5d")
region = Rect2(0, 0, 104, 218)

[sub_resource type="SpriteFrames" id="SpriteFrames_igs7x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oil4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys2x2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lgfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erq0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfopj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t28le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drsu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4vuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp5n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkxgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffbvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm2me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r24we")
}],
"loop": false,
"name": &"小鹿autoAttack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hi0ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fwyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd8gt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krrax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw5uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l5d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5oxt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0iqr")
}],
"loop": true,
"name": &"小鹿idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rloiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2je3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pymop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1qug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eamla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6vqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1bs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_736ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8srn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5k58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrst7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7utu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8nl8")
}],
"loop": false,
"name": &"小鹿magic",
"speed": 8.0
}]

[node name="AnimatedSprite2D" type="AnimatedSprite2D"]
z_index = 50
position = Vector2(-26, -54.5)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_igs7x")
animation = &"小鹿magic"
script = ExtResource("35_ghnq7")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -44.0
offset_top = -73.0
offset_right = 626.0
offset_bottom = -15.0
scale = Vector2(0.123956, 0.282733)
value = 50.0
texture_under = ExtResource("36_3bsl0")
texture_progress = ExtResource("36_3bsl0")
tint_under = Color(0, 0, 0, 0.286275)

[node name="start" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="turnIdle" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="timeout" from="start" to="." method="_on_start_timeout"]
[connection signal="timeout" from="turnIdle" to="." method="_on_turn_idle_timeout"]
